# Audio-Tool-Ideas

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml
videospec/: build.py  pyproject.toml
videospec/backend/: audio_rt.py  batch.py  main.py  settings.py
videospec/tests/: test_health.py  test_ws.py
videospec/ui/: index.html  package.json  vite.config.js
videospec/ui/src/: App.jsx
