[tool.poetry]
name = "videospec"
version = "0.1.0"
description = "EasyRun Video Spectrum Analyzer"
authors = ["Andrew <andrew@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.29"}
pydantic = {extras = ["dotenv"], version = "^2.5"}
numpy = "^2.3"
sounddevice = "^0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
